# traduire

./: .containerignore  .gitignore  .mailmap  .pre-commit-config.yaml  Containerfile  LICENSE  README.md  asgi.py  biome.json  fabfile.py  form_rendering.py  manage.py  package.json  pyproject.toml  requirements-to-freeze.txt  requirements.txt  rsbuild.config.ts  rspack.config.js  rspack.library.js  shortcuts.py  wsgi.py
.github/workflows/: python-app.yml
accounts/: admin.py  apps.py  forms.py  models.py  test_login.py  test_registration.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
app/: context_processors.py  elements.py  ratelimiting.py  renderer.py  settings.py  sso.py  urls.py
app/templates/: 404.html  base.html  svg.html
app/templatetags/: markcurrent.py  webpack_assets.py
cli/: README.md  pyproject.toml  trd.py
conf/: _env  strings.js
conf/fixtures/: user.json
frontend/: main.js
frontend/dashboard/: base.css  login.css  objects.css
frontend/js/: storage.js  utils.js
frontend/styles/: body.css  buttons.css  custom-media.css  entries.css  fonts.css  forms.css  functional.css  header.css  icons.css  login.css  menu.css  messages.css  pagination.css  reset.css  table.css  vars.css
htdocs/: manifest.json
projects/: admin.py  apps.py  feeds.py  foreign.py  forms.py  models.py  test_views.py  translators.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_catalog_options_alter_project_token_and_more.py  0002_catalog_created_at_catalog_updated_at_and_more.py  0003_project__email_domains.py  0003_project_slug.py  (+3 more)
(+26 files in other folders)
